FIX: missing padding left in individual archive page

--- a/src/pages/Lanting/components/ArchivePage/index.less
+++ b/src/pages/Lanting/components/ArchivePage/index.less
@@ -1,5 +1,9 @@
 @import '~antd/es/style/themes/default.less';
 
+a.listItemMetaTitle {
+  padding-left: 6px;
+}
+
 .pcontainer {
   padding-bottom: 0px;
   :global > {
